# stable_distribution

./: .gitignore  README.md  meson.build  stable_config.h.in
FMStable_test/: FMStable.cpp  FMStable_test.cpp  meson.build
Zolotarev/: gamma_derivative_at_integers.h  meson.build  zolotarev.cpp  zolotarev.h  zolotarev_base.h  zolotarev_cdf.h  zolotarev_ddx_pdf.h  zolotarev_integral.h  zolotarev_pdf.h
basic_test/: basic_test.cpp  kolmogorov.h  kolmogorov_cdf.cpp  meson.build
doc/: Doxyfile.in  Doxyfile.in.bak  README.md  meson.build
doc/build_linux_gcc/meson-logs/: meson-log.txt
duality_check/: duality_check.cpp  meson.build
dump_mpreal/: dump_mpreal.cpp  meson.build  meson.build~
fit_test/: fit_test.cpp  meson.build
misc/: README.txt  eigen3.pc  gmp.pc  mpfrcpp.pc  mpreal.h
quick_test/: meson.build  quick_test.cpp
random_test/: meson.build  random_test.cpp
stable_distribution/: Problem.h  adaptive_integration.h  adaptive_integration_impl.h  bracket_and_solve.h  cubicspline.h  gamma_derivative_at_integers.h  gauss_kronrod.h  gauss_kronrod_impl.h  meson.build  meta.h  myFloat.h  neldermeadsolver.h  parameter_check.h  q_guess.cpp  q_guess.h  stable_distribution.cpp  stable_distribution.h  stable_distribution_Vec.h  stable_distribution_Vec_impl.h  stable_distribution_base.h  stable_distribution_cdf.h  stable_distribution_ddx_pdf.h  stable_distribution_fit.h  stable_distribution_fit_impl.h  stable_distribution_mode.h  stable_distribution_pdf.h  stable_distribution_quantile.h  stable_distribution_random.h
stable_distribution_v3/: main.cpp  q_guess.cpp  q_guess.h  stable_distribution_base.h  stable_distribution_ddx_pdf.h  stable_distribution_mode.h  stable_distribution_pdf.h  stable_distribution_quantile.h  stable_distribution_random.h
stable_distribution_v3.xcodeproj/: project.pbxproj
stable_distribution_v3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
stable_distribution_v3.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
stable_distribution_v3.xcodeproj/xcuserdata/jdunn.xcuserdatad/xcschemes/: FMStable_test.xcscheme  Zolotarev.xcscheme  duality_check.xcscheme  dump_mpreal.xcscheme  fit_test.xcscheme  quick_test.xcscheme  random_test.xcscheme  stable_distribution.xcscheme  stable_distribution_v3.xcscheme  trace.xcscheme  trace_Vec.xcscheme  trace_stable_mode.xcscheme  trace_zolotarev.xcscheme  xcheck_to_file.xcscheme  xcschememanagement.plist
stable_dump/: meson.build  stable_dump.cpp
trace/: meson.build  trace.cpp
trace_Vec/: trace_Vec.cpp
trace_duality/: meson.build  trace_duality.cpp
trace_zolotarev/: meson.build  trace_zolotarev.cpp
xcheck_series_to_file/: meson.build  xcheck_series_to_file.cpp
xcheck_to_file/: meson.build  xcheck_to_file.cpp
xcheck_two_files/: meson.build  xcheck_two_files.cpp
