

zolotarev = executable('zolotarev', 
                        ['zolotarev.cpp',
			 'zolotarev.h',
			 'zolotarev_base.h',
			 'zolotarev_cdf.h',
			 'zolotarev_pdf.h',
			 'zolotarev_integral.h',
			 'gamma_derivative_at_integers.h'],
                        dependencies : stable_distribution_dep) 



